<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgotPassActivity">

    <TextView
        android:id="@+id/view_esqueceu"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:gravity="center"
        android:text="@string/txt_esquecipw"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:gravity="center"
        android:text="@string/txt_info_pw"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_email_forgotpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txt_forgotpw"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_forgotpw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgotpw" />

    <TextView
        android:id="@+id/view_voltar_pw"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/view_voltarpw"
        android:textColor="#0073CA" />
</LinearLayout>