<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:textColor="#E6AD58"
        android:id="@+id/view_logo"
        android:layout_width="match_parent"
        android:layout_height="154dp"
        android:gravity="center"
        android:text="@string/view_solvers"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/view_login" />

    <EditText
        android:id="@+id/txt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_senha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/txt_nao_tem_cad"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/txt_nao_tem_cadastro" />

    <TextView
        android:textColor="#5B87FF"
        android:id="@+id/txt_esqueci_senha"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:gravity="center|top"
        android:text="Esqueceu sua senha?" />

</LinearLayout>